# bratishka-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: error.rs  format.rs  inteligence.rs  main.rs  pipeline.rs  pipeline_old.rs  provider.rs  types.rs
apps/cli/src/workers/: analyze_sections.rs  cli_completion_sink.rs  compile_report.rs  download_video.rs  extract_audio.rs  mod.rs  transcribe_audio.rs
apps/cli/src/workers/events/: audio_transcribed.rs  mod.rs  report_compiled.rs  sections_analyzed.rs  youtube_audio_extracted.rs  youtube_url_requested.rs  youtube_video_downloaded.rs
apps/desktop/src/: main.rs
crates/bratishka-cli/: Cargo.toml
crates/bratishka-cli/src/: main.rs
crates/bratishka-core/: Cargo.toml
crates/bratishka-core/src/: cache.rs  error.rs  lib.rs  pipeline.rs  provider.rs  types.rs
crates/bratishka-desktop/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: cache.rs  error.rs  format.rs  inteligence.rs  lib.rs  pipeline.rs  provider.rs  types.rs
crates/core/src/events/: bus.rs  bus_builder.rs  event.rs  metadata.rs  mod.rs
crates/core/src/queues/: fifo_drop_oldest_queue.rs  isolated_forwarder.rs  latest1_queue.rs  mod.rs
crates/core/src/routes/: mod.rs
crates/core/src/source/: mod.rs
crates/core/src/workers/: mod.rs  wiring.rs  worker.rs  worker_inputs.rs
crates/core/src/workers/events/: mod.rs  pipeline_failed.rs
crates/core/src/workflow/: mod.rs
src/: main.rs
