[package]
name = "bratishka"
version = "0.1.0"
edition = "2024"
description = "CLI tool to download YouTube videos, transcribe with Whisper, and generate AI-powered reports"
license = "MIT"
repository = "https://github.com/kuchmenko/bratishka-rs"
keywords = ["youtube", "transcription", "whisper", "cli", "ai"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"

tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
clap = { version = "4.0.32", features = ["derive"] }
indicatif = "0.18.3"
console = "0.16.1"
dirs = "6.0.0"
