[workspace]
resolver = "2"
members = ["crates/*", "apps/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kuchmenko/bratishka-rs"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
dirs = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
console = "0.16.1"
iced = "0.13"
hound = "3.5.1"
whisper-rs = { version = "0.15.1", features = ["cuda"] }
