[package]
name = "bratishka-core"
description = "Core library for bratishka - YouTube video transcription and AI-powered reports"
keywords = ["youtube", "transcription", "whisper", "ai"]
categories = ["multimedia"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
hound = { workspace = true }
whisper-rs = { workspace = true }
