[package]
name = "bratishka-core"
description = "Core library for bratishka - YouTube video transcription and AI-powered reports"
keywords = ["youtube", "transcription", "whisper", "ai"]
categories = ["multimedia"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
serde = { workspace = true }
erased-serde = { workspace = true }
uuid = { workspace = true }
